@@ -1,6 +1,5 @@
 package dev.khbd.lens4j.processor.generator;
 
-import com.google.common.collect.ImmutableMap;
 import com.squareup.javapoet.ClassName;
 import com.squareup.javapoet.CodeBlock;
 import dev.khbd.lens4j.core.Lenses;
@@ -30,7 +29,7 @@ class FieldLensPartGenerationStrategy implements LensPartGenerationStrategy {
                               ResolvedParametrizedTypeMirror targetType,
                               String name,
                               LensType lensType) {
-        Map<String, Object> params = ImmutableMap.of(
+        Map<String, Object> params = Map.of(
                 "lenses", ClassName.get(Lenses.class),
                 "sourceType", typeNameBuilder.buildTypeName(sourceType),
                 "targetType", typeNameBuilder.buildTypeName(targetType),
